<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_et_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_email">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_et_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_password"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_huge"
            android:layout_marginRight="@dimen/spacing_huge"
            android:background="@color/white"
            android:text="@string/login_btn"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_huge"
            android:layout_marginRight="@dimen/spacing_huge"/>
        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_google_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/create_account_tv"/>
    </RelativeLayout>
</LinearLayout>