<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tb_create_account_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="lollipop"/>
    <ImageView
        android:id="@+id/img_create_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_normal"
        android:src="@drawable/ic_account"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">
        <EditText
            android:id="@+id/et_create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_et_hint"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">
        <EditText
            android:id="@+id/et_create_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_et_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin">
        <EditText
            android:id="@+id/et_create_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_et_hint"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginLeft="@dimen/spacing_create_btn"
        android:layout_marginRight="@dimen/spacing_create_btn"
        android:text="@string/create_account_btn"
        android:textAllCaps="false"
        android:textStyle="bold"/>
</LinearLayout>